PharmaDemo/src/objects/Update_Log__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N30000002ae4PEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conflicting_Field__c</fullName>
        <label>Conflicting Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Value__c</fullName>
        <label>Current Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rejected_Value__c</fullName>
        <label>Rejected Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rejected_refId__c</fullName>
        <label>Rejected Reference Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_applied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update applied</label>
        <type>Checkbox</type>
    </fields>
    <label>Validated Update</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Conflicting_Field__c</columns>
        <columns>Current_Value__c</columns>
        <columns>Rejected_Value__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Update_applied__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Applied_Updates</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Conflicting_Field__c</columns>
        <columns>Current_Value__c</columns>
        <columns>Rejected_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Update_applied__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Applied Updates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>To_be_checked</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Conflicting_Field__c</columns>
        <columns>Current_Value__c</columns>
        <columns>Rejected_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Update_applied__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>To be checked</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LOG-{000000000}</displayFormat>
        <label>Update Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Validated Updates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>